chore: add social
